yarte/tests/fails/derive-print.rs
use yarte::Template;

#[derive(Template)]
#[template(src = "", print = "foo")]
struct Test;

fn main() {}
