yarte/tests/fails/derive-print.stderr
error: invalid value for print attribute: foo
 --> $DIR/derive-print.rs:4:22
  |
4 | #[template(src = "", print = "foo")]
  |                      ^^^^^^^^^^^^^
